fix(component): fix layering and z-index for page and navigation
affects: ak-navigation, ak-page

--- a/packages/ak-page/src/shadow.less
+++ b/packages/ak-page/src/shadow.less
@@ -24,4 +24,9 @@
   position: relative;
   z-index: @content-z-index;
 };
+@navigation-slot-direct-children: {
+  position: relative;
+  z-index: @content-z-index;
+};
 .select-slot-children('main-slot', @main-slot-direct-children);
+.select-slot-children('navigation-slot', @navigation-slot-direct-children);
